--- a/catalouge-style.css
+++ b/catalouge-style.css
@@ -10,7 +10,7 @@ td {
   padding: 10px;
 }
 td>img{
-    width: 100px;
+    width: 10vw;
     cursor: pointer;
     transition: 400ms;
 }
@@ -22,7 +22,7 @@ button{
     cursor: pointer;
 }
 button>img{
-    width: 150px;
+    width: 15vw;
 }
 .message-container {
   position: fixed;
