--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
 }
 div.container{
     border-top-left-radius: 2vw;
-    border-left: 1px solid #000;
+    border-left: 0.2vw solid #000;
 }
 h1{
     background-color: #000;
@@ -12,7 +12,6 @@ h1{
     border-top-left-radius: 2vw;
 }
 p{
-    line-height: 2vw;
     word-spacing: 0.5vw;
-    padding-left: 5px;
+    padding-left: 1vw;
 }
